<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Podcast Catcher</string>
    <string name="search_not_found">Not found</string>
    <string name="action_settings">Settings</string>
    <string name="ok">Ok</string>
    <string name="title_podcast">Podcasts</string>
    <string name="title_downloads">Downloads</string>
    <string name="title_player">Player</string>
    <string name="paste">Paste</string>
    <string name="Subscribe">Enter the URL of the podcast you wish to subscribe to.</string>
    
    <!-- Episode Adapter -->
    <string name="delete">Delete</string>
    <string name="delete_all">Delete All</string>
    <string name="add_to_playlist">Add to playlist</string>
    
    <!-- Settings -->
    <string name="prefSyncFrequency">prefSyncFrequency</string>
    <string name="prefSyncFrequency_title">Download timing</string>
    <string name="prefSyncFrequency_summary">How often to download new shows.</string>
    <string name="prefAutoDelete">prefAutoDelete</string>
    <string name="prefAutoDelete_title">Auto Delete</string>
    <string name="prefAutoDelete_summary">Delete episodes after they\'re finished playing"</string>
    <string-array name="sync_frequency">
        <item name="1">Every hour</item>
        <item name="8">Every 8 hours</item>
        <item name="24">Every day</item>
        <item name="168">Every week</item>
        <item name="0">Never</item>
    </string-array>
    <string-array name="sync_frequency_values">
        <item name="1">1</item>
        <item name="8">8</item>
        <item name="24">24</item>
        <item name="168">168</item>
        <item name="0">Never</item>
    </string-array>
    <string name="prefDeleteXShows_title">Keep how many?</string>
    <string name="prefDeleteXShows_summary">Keep how many shows of each Podcast?</string>
    <string name="prefDeleteXShows">prefDeleteXShows</string>
    
</resources>