<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
   <EditTextPreference 
       android:title="test"
       android:key="test"
       android:summary="Test"
       />
   <ListPreference 
       android:key="@string/prefSyncFrequency"
       android:title="@string/prefSyncFrequency_summary"
       android:entries="@array/sync_frequency"
       android:entryValues="@array/sync_frequency_values"
       />
   <CheckBoxPreference 
       android:key="@string/prefAutoDelete"
       android:title="@string/prefAutoDelete_summary"
       android:defaultValue="false"
       />
   
   <ListPreference 
       android:key="@string/prefDeleteXShows"
       android:title="@string/prefDeleteXShows_summary"
       android:entries="@array/x_shows"
       android:entryValues="@array/x_shows_values"
       />
   
</PreferenceScreen>
